      configure timeout and retries for SNMP requests (also via WATO)

    WATO:
    * ps and ps.perf configurable via WATO now (without inventory)
    * New layout of main menu and a couple of other similar menus
    * New layout of ruleset overviews
    * Hide check_mk variable names per default now (change via global settings)
    * New layout of global settings
    * FIX: honor folder-permissions when creating, deleting 
           and modifiying rules
    * FIX: detect non-local site even if unix: is being used
    * FIX: better error message if not logged into site during 
           action that needs remote access
    * FIX: send automation data via POST not GET. This fixes inventory
           on hosts with more than 500 services.
    * FIX: make config options directly active after resetting them
           to their defaults (didn't work for start_url, etc.
    * FIX: Fixed editing of ListOf in valuespec editors (e.g. used in logwatch
    pattern editor)

    Multisite:
    * FIX: fixed filter of recent event views (4 hours didn't catch)
    * FIX: convert more buttons to new graphical style
    * FIX: Logwatch handles logs with only OK lines in it correctly in logfile list views
    * FIX: Fixed syntax error in "Single-Host Problems" view definition
    * New help button at top right of each page now toggles help texts

    Mobile GUI:
    * FIX: commands can be executed again
    * FIX: fixed styling of buttons

    Checks & Agents:
    * FIX: Logwatch: fixed missing linebreak during reclassifing lines of logfiles
    * FIX: Logwatch: Logwatch services in rules configured using WATO must be
      given as item, not as whole service name

    BI:
    * FIX: make rotating folding arrows black (white was not visible)
    * Display format 'boxes' now in all BI views available
    * Display format 'boxes' now persists folding state

1.2.0b3:
    Core:
    * FIX: fixed SNMP info declaration in checks: could be garbled
      up in rare cases